правит имена классов по БЭМ

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,6 +16,7 @@
 @import "blocks/_slider";
 @import "blocks/_price";
 @import "blocks/_contacts";
+@import "blocks/_map";
 @import "blocks/_competition";
 @import "blocks/_filters-group";
 @import "blocks/_input-block";
