--- a/source/sass/blocks/_user-photo.scss
+++ b/source/sass/blocks/_user-photo.scss
@@ -57,6 +57,11 @@
   background: url("../img/icon-heart.svg") no-repeat center;
   border: none;
   outline: none;
+
+  &:active,
+  &:focus {
+    outline: 2px solid #2395d6;
+  }
 }
 
 .user-photo__like {
