--- a/source/sass/blocks/_header.scss
+++ b/source/sass/blocks/_header.scss
@@ -6,6 +6,7 @@
   background: $deepgrey url("../img/bg-back-mobile@1x.jpg") no-repeat;
   background-size: 100% auto;
   background-position-y: 259px;
+  background-color: #253240;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
@@ -133,10 +134,6 @@
   display: block;
 }
 
-.main-nav--nojs .header__button {
-  display: none;
-}
-
 .header__top--closed .header__button {
   width: 50px;
   height: 26px;
@@ -166,14 +163,16 @@
   .header__main-page {
     background: url("../img/bg-back-tablet@1x.jpg") no-repeat;
     background-position: center 0;
+    background-color: #253240;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("../img/bg-back-tablet@2x.jpg");
       background-size: 1200px auto;
     }
   }
+
   .header__top {
-    height:109px;
+    height: 109px;
   }
 
   .header__logo-container {
@@ -230,6 +229,7 @@
   .header {
     background: url("../img/bg-back-desktop@1x.jpg") no-repeat center 0;
     background-size: 234%;
+    background-color: #253240;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("../img/bg-back-desktop@2x.jpg");
@@ -292,7 +292,7 @@
     align-items: center;
     width: 940px;
     margin: 0 auto;
-    padding: 0px 10px;
+    padding: 0 10px;
   }
 
   .header__top-box {
