--- a/source/sass/blocks/_map.scss
+++ b/source/sass/blocks/_map.scss
@@ -12,7 +12,7 @@
   display: block;
   content: "";
   position: absolute;
-  top: 0;
+  top: -2px;
   width: 100%;
   height: 50px;
   background: url("../img/bg-triangle-white-footer.svg") center top/100% 35px no-repeat;
