--- a/source/sass/partials/_fonts.scss
+++ b/source/sass/partials/_fonts.scss
@@ -4,6 +4,7 @@
 
   src: url("../fonts/opensans.woff") format("woff"),
     url("../fonts/opensans.woff2") format("woff2");
+  font-display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
 
   src: url("../fonts/opensansbold.woff") format("woff"),
     url("../fonts/opensansbold.woff2") format("woff2");
+  font-display: swap;
 }
 
 @font-face {
@@ -20,4 +22,5 @@
 
   src: url("../fonts/opensanslight.woff") format("woff"),
     url("../fonts/opensanslight.woff2") format("woff2");
+  font-display: swap;
 }
