--- a/source/sass/blocks/_map.scss
+++ b/source/sass/blocks/_map.scss
@@ -1,10 +1,10 @@
 .map {
   position: relative;
-  z-index: 0;
+  z-index: 1;
   height: 200px;
 
   background: url("../img/bg-map-mobile@1x.png") no-repeat center;
-  background-size: 100% auto;
+  background-size: cover;
 }
 
 .map::before {
@@ -22,7 +22,7 @@
   .map {
     height: 374px;
 
-    background: url("../img/bg-map-tablet@1x.png") no-repeat center;
+    background: url("../img/bg-map-tablet@1x.jpg") no-repeat center;
     background-size: 100% auto;
   }
 
@@ -36,7 +36,7 @@
   .map {
     height: 485px;
 
-    background: url("../img/bg-map-desktop@1x.png") no-repeat center;
+    background: url("../img/bg-map-desktop@1x.jpg") no-repeat center;
     background-size: 100% auto;
   }
 
