--- a/source/sass/blocks/_photo.scss
+++ b/source/sass/blocks/_photo.scss
@@ -97,7 +97,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 108px;
+    min-height: 108px;
     padding-top: 24px;
     padding-right: 33px;
     padding-bottom: 23px;
