--- a/source/sass/blocks/_footer.scss
+++ b/source/sass/blocks/_footer.scss
@@ -155,16 +155,17 @@
   .footer__social-list {
     align-self: flex-end;
     margin: 0 auto;
+    margin-top: 3px;
   }
 
   .footer__copyright {
     align-self: flex-end;
     width: 150px;
-    margin-bottom: 2px;
+    margin-bottom: 4px;
   }
 
   .footer__text {
-    padding-left: 21px;
+    padding-left: 22px;
   }
 }
 
