--- a/source/sass/blocks/_contacts.scss
+++ b/source/sass/blocks/_contacts.scss
@@ -26,7 +26,8 @@
 
 .contacts__title {
   margin: 0;
-
+  margin-bottom: 1px;
+  margin-left: 2px;
   @include font-set(18px, 27px, 700, $darkgrey, center);
 }
 
@@ -37,6 +38,7 @@
 .contacts__mail {
   position: relative;
   margin-bottom: 22px;
+  padding-left: 3px;
 }
 
 .contacts__phone {
@@ -123,7 +125,7 @@
   }
 
   .contacts__title {
-    margin-bottom: 3px;
+    margin-bottom: 4px;
   }
 
   .contacts__list {
@@ -135,8 +137,8 @@
   }
 
   .contacts__item:first-child {
-    margin-left: 46px;
-    margin-right: 96px;
+    margin-left: 44px;
+    margin-right: 92px;
   }
 
   .contacts__adress {
@@ -207,7 +209,11 @@
     flex-grow: 0;
     flex-shrink: 0;
     margin: 0;
-    margin-right: 72px;
+    margin-right: 67px;
+
+    .contacts__text {
+      padding-left: 0;
+    }
   }
 
   .contacts__header {
