--- a/source/sass/blocks/_map.scss
+++ b/source/sass/blocks/_map.scss
@@ -24,11 +24,12 @@
 
     background: url("../img/bg-map-tablet@1x.jpg") no-repeat center;
     background-size: 100% auto;
-  }
 
-  .map::before {
-    height: 80px;
-    background-size: 100% 80px;
+    &::before {
+      top: -4px;
+      height: 80px;
+      background-size: 100% 80px;
+    }
   }
 }
 
@@ -41,6 +42,7 @@
   }
 
   .map::before {
+    top: -31px;
     height: 150px;
     background-size: 100% 150px;
   }
