--- a/source/sass/blocks/_header.scss
+++ b/source/sass/blocks/_header.scss
@@ -172,8 +172,9 @@
       background-size: 1200px auto;
     }
   }
+
   .header__top {
-    height:109px;
+    height: 109px;
   }
 
   .header__logo-container {
@@ -292,7 +293,7 @@
     align-items: center;
     width: 940px;
     margin: 0 auto;
-    padding: 0px 10px;
+    padding: 0 10px;
   }
 
   .header__top-box {
