--- a/source/sass/blocks/_input-block.scss
+++ b/source/sass/blocks/_input-block.scss
@@ -171,7 +171,7 @@
   }
 
   .input-block__item--input:last-of-type {
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
 
   .input-block__text {
