--- a/source/sass/blocks/_footer.scss
+++ b/source/sass/blocks/_footer.scss
@@ -5,8 +5,6 @@
   align-items: center;
   margin: 0 auto;
   padding: 43px 20px;
-
-  svg.logo-letters {}
 }
 
 .footer__logo {
@@ -157,16 +155,17 @@
   .footer__social-list {
     align-self: flex-end;
     margin: 0 auto;
+    margin-top: 3px;
   }
 
   .footer__copyright {
     align-self: flex-end;
     width: 150px;
-    margin-bottom: 2px;
+    margin-bottom: 4px;
   }
 
   .footer__text {
-    padding-left: 21px;
+    padding-left: 22px;
   }
 }
 
@@ -214,6 +213,6 @@
   }
 
   .footer__social-item:not(:last-child) {
-  margin-right: 12px;
+    margin-right: 12px;
   }
 }
