--- a/source/sass/blocks/_review.scss
+++ b/source/sass/blocks/_review.scss
@@ -12,6 +12,11 @@
 
 .review__toggle {
   display: none;
+
+  &:active,
+  &:focus {
+    outline: 2px solid #2395d6;
+  }
 }
 
 .review__wrapper {
@@ -119,7 +124,7 @@
 
     background-image: url("../img/icon-quotes.svg");
     background-repeat: no-repeat;
-    background-position: 50% 71px;
+    background-position: 50% 72px;
     background-size: 80px 63px;
   }
 
