--- a/source/sass/blocks/_information.scss
+++ b/source/sass/blocks/_information.scss
@@ -215,6 +215,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
+    flex-wrap: wrap;
     padding: 0;
 
     background-image: none;
