--- a/source/sass/blocks/_review.scss
+++ b/source/sass/blocks/_review.scss
@@ -120,7 +120,10 @@
 @media (min-width: $desktop-width) {
   .review {
     margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 184px;
+    width: 960px; 
 
     background-image: url("../img/icon-quotes.svg");
     background-repeat: no-repeat;
