--- a/source/sass/blocks/_slider.scss
+++ b/source/sass/blocks/_slider.scss
@@ -37,3 +37,9 @@
   background-color: transparent;
   border: 3px solid $darkgrey;
 }
+
+@media (min-width: $desktop-width) {
+  .slider__toggle {
+    display: none;
+  }
+}
